Hard-coded height for .entry-page .media to prevent jump when loading page.

--- a/style.css
+++ b/style.css
@@ -460,6 +460,7 @@ because webkit doesn't crop for border-radius on boxes. */
 
 .entry--page .media {
     margin: 0 0 0 -8px;
+    height: 240px;
     width: 978px;
 }
 .entry--page .media img {
